fix(navbar): correct centering alignment

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,7 +1,8 @@
 @import url("colors.css");
 
 .navbar {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   font-family: "Space Grotesk";
   font-size: 18px;
   justify-content: space-between;
@@ -15,6 +16,10 @@
   color: var(--text);
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.navbar > :last-child {
+  justify-self: right;
 }
 
 .links {
